setup/Istio/archive/observability/observability-grafana-slainte-at.yaml
---
# VirtualService routing for host ${K8S_ENVIRONMENT}.grafana.slainte.at to kube-prom-stack-grafana service 
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: k8s-grafana-slainte-at-vs
  namespace: observability
spec:
  hosts:
    - "${K8S_ENVIRONMENT}.grafana.slainte.at"
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prom-stack-grafana.observability.svc.cluster.local
            port:
              number: 80
---
